logs/dag_id=offline_translation_pipeline/run_id=manual__2026-03-10T08:01:40.547654+00:00/task_id=node2_preprocess/attempt=1.log
[2026-03-10T08:01:56.517+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-03-10T08:01:56.737+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: offline_translation_pipeline.node2_preprocess manual__2026-03-10T08:01:40.547654+00:00 [queued]>
[2026-03-10T08:01:56.768+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: offline_translation_pipeline.node2_preprocess manual__2026-03-10T08:01:40.547654+00:00 [queued]>
[2026-03-10T08:01:56.769+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-03-10T08:01:56.833+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): node2_preprocess> on 2026-03-10 08:01:40.547654+00:00
[2026-03-10T08:01:56.856+0000] {standard_task_runner.py:64} INFO - Started process 760 to run task
[2026-03-10T08:01:56.893+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'offline_translation_pipeline', 'node2_preprocess', 'manual__2026-03-10T08:01:40.547654+00:00', '--job-id', '8', '--raw', '--subdir', 'DAGS_FOLDER/offline_pipeline.py', '--cfg-path', '/tmp/tmpqw3k5mmc']
[2026-03-10T08:01:56.917+0000] {standard_task_runner.py:91} INFO - Job 8: Subtask node2_preprocess
[2026-03-10T08:01:57.227+0000] {task_command.py:426} INFO - Running <TaskInstance: offline_translation_pipeline.node2_preprocess manual__2026-03-10T08:01:40.547654+00:00 [running]> on host 683ed37e5f2c
[2026-03-10T08:01:57.937+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mlops' AIRFLOW_CTX_DAG_ID='offline_translation_pipeline' AIRFLOW_CTX_TASK_ID='node2_preprocess' AIRFLOW_CTX_EXECUTION_DATE='2026-03-10T08:01:40.547654+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-03-10T08:01:40.547654+00:00'
[2026-03-10T08:01:57.940+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-03-10T08:01:57.984+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-03-10T08:01:57.985+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/offline_pipeline.py", line 16, in node2
    def node2(): from preprocess import preprocess_datasets; preprocess_datasets()
  File "/opt/airflow/scripts/preprocess.py", line 63
    if not en or no
                   ^
SyntaxError: invalid syntax
[2026-03-10T08:01:58.092+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=offline_translation_pipeline, task_id=node2_preprocess, run_id=manual__2026-03-10T08:01:40.547654+00:00, execution_date=20260310T080140, start_date=20260310T080156, end_date=20260310T080158
[2026-03-10T08:01:58.164+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 8 for task node2_preprocess (invalid syntax (preprocess.py, line 63); 760)
[2026-03-10T08:01:58.204+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2026-03-10T08:01:58.349+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-03-10T08:01:58.354+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
